# spark_with_kube

./: CLEANUP_POLICY_EXPLAINED.md  FIXES.md  NAMESPACED_POLICY.md  QUICK_REFERENCE.md  README.md  TIMEOUT_CONFIG.md  WHICH_VERSION.md  apply-ban-policy-namespaced.sh  apply-ban-policy.sh  driver-proxy.yaml  install.sh  minio-nodeport.yaml  pyproject.toml  pyspark_on_kube_example.py  setup_minikube.sh  spark-app-banning-policy-namespaced.yaml  spark-app-banning-policy.yaml  spark-rbac.yaml
cluster_mode_custom_image_demo/: KUBERNETES_VS_YARN.md  app.py  kill_listener.sh  log_listener.py  run.sh  run_in_cluster_mode.py  run_in_cluster_mode_configmap.py  run_in_cluster_mode_hostpath.py  run_in_cluster_mode_minio.py
cluster_mode_custom_image_demo/extra_package/: extra_module.py
docker/spark-3.5.8-python3.8/: Dockerfile  build_and_push.sh
stress_test/: __init__.py  settings.py  stress_test.py  worker.py  worker_main.py
