[project]
name = "spark-with-kube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "black>=24.8.0",
    "minio>=7.2.7",
    "psutil>=6.1.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyspark==3.5.8",
]

